@@ -28,7 +28,8 @@ typedef enum _GstTTMLAttributeType {
   GST_TTML_ATTR_WHITESPACE_PRESERVE,
   GST_TTML_ATTR_SEQUENTIAL_TIME_CONTAINER,
   GST_TTML_ATTR_COLOR,
-  GST_TTML_ATTR_BACKGROUND_COLOR
+  GST_TTML_ATTR_BACKGROUND_COLOR,
+  GST_TTML_ATTR_DISPLAY
 } GstTTMLAttributeType;
 
 /* Event types */
